<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.opennms.plugin.opa</groupId>
    <artifactId>org.opennms.plugin.opa.example</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>
    <name>OpenNMS :: OPA :: Example OPA Plugin for OpenNMS Horizon and Meridian</name>
    <url>https://github.com/OpenNMS/opennms-opa-plugin-example</url>
    <description>A basic example of a complete project for creating an OPA plugin for OpenNMS Horizon and Meridian.</description>

    <licenses>
        <license>
            <name>GNU Affero General Public License, Version 3.0</name>
	    <url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/OpenNMS/alec</url>
        <connection>scm:git:git@github.com:OpenNMS/opennms-opa-plugin-example.git</connection>
        <tag>HEAD</tag>
    </scm>

    <developers>
        <developer>
            <id>john-q-developer</id>
            <name>John Q. Developer</name>
            <email>jqd@opennms.com</email>
        </developer>
    </developers>

    <modules>
        <module>api</module>
        <module>core</module>
        <module>karaf-features</module>
        <module>assembly</module>
        <module>smoke-test</module>
    </modules>

    <properties>
        <!-- general build properties -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <maven.version.min>3.5.0</maven.version.min>
        <test.argLine>-Xmx1024m -Xms1024m -XX:MaxPermSize=512m</test.argLine>

        <!-- maven plugins and plugin dependencies -->
        <directory-maven-plugin.version>1.0</directory-maven-plugin.version>
        <maven-bundle-plugin.version>5.1.8</maven-bundle-plugin.version>
        <maven-checkstyle-plugin.version>3.2.1</maven-checkstyle-plugin.version>
        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
        <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
        <maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
        <maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
        <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
        <sevntu-checks.version>1.44.1</sevntu-checks.version>
        <sign-maven-plugin.version>1.0.1</sign-maven-plugin.version>
        <wagon-ssh-external.version>3.5.3</wagon-ssh-external.version>

        <!-- dependencies -->
        <guava.version>25.1-jre</guava.version>
        <junit.version>4.13.2</junit.version>
        <karaf.version>4.3.6</karaf.version>
        <log4j.version>2.17.0</log4j.version>
        <osgi.version>6.0.0</osgi.version>
        <osgi.compendium.version>5.0.0</osgi.compendium.version>
        <slf4j-api.version>1.7.26</slf4j-api.version>

        <!-- minimum OPA version this plugin supports (inclusive) -->
        <opennms.api.version.min>1.0.0</opennms.api.version.min>
        <!-- maximum OPA version this plugin supports (exclusive) -->
        <opennms.api.version.max>2.0.0</opennms.api.version.max>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.karaf.shell</groupId>
                <artifactId>org.apache.karaf.shell.core</artifactId>
                <version>${karaf.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>${log4j.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.osgi</groupId>
                <artifactId>org.osgi.core</artifactId>
                <version>${osgi.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.osgi</groupId>
                <artifactId>org.osgi.compendium</artifactId>
                <version>${osgi.compendium.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                 <groupId>org.opennms.integration.api</groupId>
                 <artifactId>api</artifactId>
                 <version>${opennms.api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.opennms.integration.api</groupId>
                <artifactId>common</artifactId>
                <version>${opennms.api.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.felix</groupId>
                    <artifactId>maven-bundle-plugin</artifactId>
                    <version>${maven-bundle-plugin.version}</version>
                    <extensions>true</extensions>
                    <configuration>
                        <instructions>
                            <Bundle-RequiredExecutionEnvironment>JavaSE-${java.version}</Bundle-RequiredExecutionEnvironment>
                        </instructions>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.commonjava.maven.plugins</groupId>
                <artifactId>directory-maven-plugin</artifactId>
                <version>${directory-maven-plugin.version}</version>
                <executions>
                    <execution>
                    <id>directories</id>
                        <goals><goal>directory-of</goal></goals>
                        <phase>initialize</phase>
                        <configuration>
                        <property>my.toplevel.basedir</property>
                        <project>
                            <groupId>org.opennms.plugin.opa</groupId>
                            <artifactId>org.opennms.plugin.opa.example</artifactId>
                        </project>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>${maven.version.min}</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[11,12)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven-clean-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>${nexus-staging-maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>opennms-plugin-ossrh</serverId>
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven-release-plugin.version}</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <releaseProfiles>release</releaseProfiles>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <argLine>${test.argLine}</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <configuration>
                    <argLine>${test.argLine}</argLine>
                </configuration>
            </plugin>
        </plugins>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh-external</artifactId>
                <version>${wagon-ssh-external.version}</version>
            </extension>
        </extensions>
    </build>

    <distributionManagement>
        <snapshotRepository>
            <id>opennms-plugin-ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
        <repository>
            <id>opennms-plugin-ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <repositories>
      <repository>
        <id>sonatype.org-snapshot</id>
        <name>Sonatype OSS Snapshots Repository</name>
        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        <releases><enabled>false</enabled></releases>
        <snapshots><enabled>true</enabled></snapshots>
      </repository>
    </repositories>

    <profiles>
        <profile>
            <id>checkstyle</id>
            <activation>
                <property>
                <name>!disable.checkstyle</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-checkstyle-plugin</artifactId>
                        <version>${maven-checkstyle-plugin.version}</version>
                        <dependencies>
                        <dependency>
                            <groupId>com.github.sevntu-checkstyle</groupId>
                            <artifactId>sevntu-checks</artifactId>
                            <version>${sevntu-checks.version}</version>
                        </dependency>
                        </dependencies>
                        <configuration>
                            <configLocation>${my.toplevel.basedir}/src/main/resources/nms_checks.xml</configLocation>
                            <suppressionsLocation>${my.toplevel.basedir}/src/main/resources/checkstyle-suppressions.xml</suppressionsLocation>
                            <!-- <sourceDirectory> is needed so that checkstyle ignores the generated sources directory -->
                            <sourceDirectories>${project.build.sourceDirectory}</sourceDirectories>
                            <includeResources>true</includeResources>
                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
                            <includeTestResources>true</includeTestResources>
                            <failsOnError>true</failsOnError>
                            <consoleOutput>true</consoleOutput>
                        </configuration>
                        <executions>
                            <execution>
                                <id>check-license</id>
                                <goals>
                                <goal>check</goal>
                                </goals>
                                <phase>process-resources</phase>
                                <configuration>
                                    <configLocation>${my.toplevel.basedir}/src/main/resources/check-license.xml</configLocation>
                                    <suppressionsLocation>${my.toplevel.basedir}/src/main/resources/license-suppressions.xml</suppressionsLocation>
                                    <headerLocation>${my.toplevel.basedir}/src/main/resources/AGPL-LICENSE.regexp.txt</headerLocation>
                                    <includeResources>false</includeResources>
                                    <includeTestResources>false</includeTestResources>
                                </configuration>
                            </execution>
                            <execution>
                                <id>check-style</id>
                                <goals>
                                <goal>check</goal>
                                </goals>
                                <phase>process-resources</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.simplify4u.plugins</groupId>
                        <artifactId>sign-maven-plugin</artifactId>
                        <version>${sign-maven-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <skipNoKey>false</skipNoKey>
                                    <keyId>${env.GPG_KEY_ID}</keyId>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
